--- a/index.html
+++ b/index.html
@@ -29,8 +29,64 @@
    </header>
 
    <main>
+    <!-- teams section start -->
+    <section class="teams display-flex">
+        <div class="team-img-container">
+                <img src="images/team1.png" alt="">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
+        </div>
+        <div class="our-feature">
+                <h3 class="section-title " > <span class="feature-title-1" id="quik-list">Quick list </span> <span class="feature-title-2">of Our</span><br> <span class="feature-title-3">Features</span></h3>
+                <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-primary">Explore More</button>
+        </div>
+    </section>
+    <!-- feature section start -->
+    <section>
 
-   </main>
+    </section>
+     <!-- some fact -->
+      <section>
+        <h3 class="section-title fact-title">Some Facts</h3>
+        <p class="fact-description text-light-gray">There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration.</p>
+            <div class="fact-container">
+                <div class="fact-card display-flex">
+                    <div>
+
+                        <img src="images/icons/ribon.png" alt="" class="fact-icon">
+                        <h4 class="fact-numer">54</h4>
+                        <h5 class="factmane">Awards Winnings</h5>
+                    </div>
+                </div>
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="images/icons/projects.png" alt="" class="fact-icon">
+                        <h4 class="fact-numer">1458</h4>
+                        <h5 class="factmane">Project Finished</h5>
+                    </div>
+                </div>
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="images/icons/customers.png" alt="" class="fact-icon">
+                        <h4 class="fact-numer">590</h4>
+                        <h5 class="factmane">Clients Worked</h5>
+                    </div>
+                    </div>
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="images/icons/email.png" alt="" class="fact-icon">
+                        <h4 class="fact-numer">22578</h4>
+                        <h5 class="factmane">Email Send</h5>
+                    </div>
+                </div>
+            </div>
+      </section>
+   
+   
+    </main>
 
    <footer>
 
