--- a/index.html
+++ b/index.html
@@ -44,8 +44,45 @@
         </div>
     </section>
     <!-- feature section start -->
-    <section>
-
+    <section class="features display-flex">
+        <div class="feature-content">
+            <h3 id="feature-title-left" class="section-title">Features you willlove & enjoy</h3>
+            <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the
+                majority have suffered alteration in some form, by injected humour, or
+                randomised words which don't look even</p>
+                <div class="feature-card">
+                    <h5 class="feature-title">Dexktop & Mobile Version</h5>
+                    <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available,
+                        but the majority have suffered alteration in some form, by
+                        injected humour, or randomised...........</p>
+                </div>
+                <div class="feature-card">
+                    <h5 class="feature-title">Dexktop & Mobile Version</h5>
+                    <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available,
+                        but the majority have suffered alteration in some form, by
+                        injected humour, or randomised...........</p>
+                </div>
+                <div class="feature-card">
+                    <h5 class="feature-title">Dexktop & Mobile Version</h5>
+                    <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available,
+                        but the majority have suffered alteration in some form, by
+                        injected humour, or randomised...........</p>
+                </div>
+                <div class="feature-card">
+                    <h5 class="feature-title">Dexktop & Mobile Version</h5>
+                    <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available,
+                        but the majority have suffered alteration in some form, by
+                        injected humour, or randomised...........</p>
+                </div>
+        </div>
+        <div class="feature-architec">
+            <img src="images/architect.png" alt="">
+            <button id="experience-badge" class="btn-primary">
+                <span id="experience-year">10 years</span>
+                <br>
+                <span>Experience</span>
+            </button>
+        </div>
     </section>
      <!-- some fact -->
       <section>
@@ -84,12 +121,30 @@
                 </div>
             </div>
       </section>
-   
+   <!-- our sponspors start  -->
+    <section>
+        <div class="our-sponspors">
+            <div class="sponspors-info">
+                <h3 class="section-title">Our Sponspors</h3>
+                <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but
+                    the majority have suffered alteration.</p>
+            </div>
+            <div class="sponsport-companies">
+                <img src="images/sponsors/spotify.png" alt="">
+                <img src="images/sponsors/amazon.png" alt="">
+                <img src="images/sponsors/google.png" alt="">
+                <img src="images/sponsors/telerama.png" alt="">
+                <img src="images/sponsors/figma.png" alt="">
+            </div>
+        </div>
+    </section>
    
     </main>
 
    <footer>
-
+    <div class="footer">
+        <p class="footer-p text-light-gray">All rights reserved copyright@2023 startup landing page design</p>
+    </div>
    </footer>
 </body>
 </html>
